[package]
name = "lpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"
block-modes = "0.9.1"
crossterm = "0.26.1"
ctrlc = "3.2.5"
rand = "0.8.5"
rpassword = "7.2.0"
sha2 = "0.10.6"

[[bin]]
name = "lpm"
path = "src/main.rs"
