[package]
name = "lpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"
bincode = "1.3.3"
cli-clipboard = "0.4.0"
crossterm = "0.26.1"
ctrlc = "3.2.5"
rand = "0.8.5"
rpassword = "7.2.0"
serde = "1.0.163"
serde_derive = "1.0.163"
sha2 = "0.10.6"
tabled = "0.12.0"
typenum = "1.16.0"
zeroize = "1.6.0"
copypasta-ext = "0.4.4"


[[bin]]
name = "lpm"
path = "src/main.rs"
